paragraph qo'shildi

--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
   </head>
   <body>
     <h1>Git Hub push</h1>
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel veritatis
+      enim impedit deleniti vero ex ab doloremque laudantium eaque consequuntur
+      nihil, aperiam qui eos ea harum! Aliquid ex optio inventore ullam
+      molestiae? Vero aliquid, nulla delectus fugit optio dolorum, sunt cumque
+      mollitia quo alias nesciunt aut tempore voluptas beatae minus!
+    </p>
   </body>
 </html>
