bold text qo'shildi

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
       mollitia sequi cum officiis ipsam provident voluptas ipsa laudantium eum
       blanditiis numquam ipsum fugiat tempore perferendis!</em
     >
-    <i>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat quam ipsum quia ut nihil repellat numquam veritatis, accusantium harum rerum!</i>
+    <i
+      >Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat quam
+      ipsum quia ut nihil repellat numquam veritatis, accusantium harum
+      rerum!</i
+    >
+    <b>Nurbek bold text</b>
   </body>
 </html>
