--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="/style.css">
   </head>
   <body>
     <h1>Git Hub push</h1>
@@ -27,6 +28,6 @@
     >
     <hr>
     <b>Nurbek bold text</b>
-
+    
   </body>
 </html>
