--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <i
       >Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat quam
       ipsum quia ut nihil repellat numquam veritatis, accusantium harum
-      rerum!</i
+      rerum!!!!</i
     >
     <hr>
     <b>Nurbek bold text</b>
