--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       rerum!!!!</i
     >
     <hr>
-    <b>Nurbek bold text</b>
+    <b>Nurbek bold text !!!</b>
     <del>300 ming</del>
   </body>
 </html>
