--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
     >
     <hr>
     <b>Nurbek bold text !!!</b>
-    <del>300 ming</del>
+    <del>300 ming qarzing ni ber</del>
   </body>
 </html>
